[project]
name = "automation-test-result-dashboard"
version = "0.1.0"
description = ""
authors = [
    {name = "taurus5650",email = "taurus_5650@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "streamlit (>=1.49.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
